--- a/3_Time_Series_W3_Analysis.ipynb
+++ b/3_Time_Series_W3_Analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyOsvUVZnxdi3bJOBrYPqL03",
+      "authorship_tag": "ABX9TyNq9sUG8euJDhinpVlzXb13",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,16 +24,24 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/vikramwakhlu/Time_Series_Modelling/blob/main/Time_Series_W3_Analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/vikramwakhlu/Time_Series_Modelling/blob/main/3_Time_Series_W3_Analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Initial Data and Library Load"
+      ],
+      "metadata": {
+        "id": "xv9WqeR6pfjk"
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        "# STEP 0: Install gdown\n",
         "!pip install -U gdown\n",
         "!pip install darts\n",
-        "# STEP 1: Imports and helper functions\n",
+        "\n",
         "import pandas as pd\n",
         "import requests\n",
         "import io\n",
@@ -189,6 +197,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Clamp to Jan 1 – Mar 31, 2014"
+      ],
+      "metadata": {
+        "id": "FLTnC7FZptSc"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Step 2: Clamp to Jan 1 – Mar 31, 2014\n",
@@ -338,10 +355,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Features: Lag"
+        "# Features Engineering for XG Boost"
       ],
       "metadata": {
         "id": "LK8QJxa_qWeq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Lags"
+      ],
+      "metadata": {
+        "id": "WBKir1YrnpPs"
       }
     },
     {
@@ -362,6 +388,15 @@
       },
       "execution_count": 78,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Rolling Means"
+      ],
+      "metadata": {
+        "id": "5qtLyTKmqJbw"
+      }
     },
     {
       "cell_type": "code",
@@ -402,6 +437,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "###Date based features"
+      ],
+      "metadata": {
+        "id": "bzidojSzqPet"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Add date-based features\n",
@@ -414,9 +458,9 @@
         "#daily['is_payday']    = np.isin(daily.index.day, [1, 15]).astype(int)\n",
         "\n",
         "# Bring 'date' BACK as a real column (do NOT drop=True)\n",
-        "daily = daily.reset_index()                    # now 'date' is a column again\n",
+        "daily = daily.reset_index()\n",
         "\n",
-        "# Optional: keep rows ordered and simple index\n",
+        "# Keep rows ordered and simple index\n",
         "daily = daily.sort_values('date').reset_index(drop=True)"
       ],
       "metadata": {
@@ -426,9 +470,17 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "###Differentiate Feature and Target columns"
+      ],
+      "metadata": {
+        "id": "AuoKpSLLqgjt"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# Choose from what we already have\n",
         "feature_cols = [\n",
         "    'lag_1','lag_7','lag_14','lag_30',\n",
         "    'rolling_mean_7','rolling_std_7',\n",
@@ -441,6 +493,15 @@
       },
       "execution_count": 81,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Build Modeling Frame"
+      ],
+      "metadata": {
+        "id": "unA-St1oqmvU"
+      }
     },
     {
       "cell_type": "code",
@@ -832,12 +893,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Chronological split - Train/Test: Train = Jan–Feb 2014, Test = Mar 2014"
+      ],
+      "metadata": {
+        "id": "2la_9hjuqsG5"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# Chronological split: Train = Jan–Feb 2014, Test = Mar 2014\n",
         "train_mask = (df_ml['date'] >= pd.Timestamp('2014-01-01')) & (df_ml['date'] <= pd.Timestamp('2014-02-28'))\n",
-        "test_mask  = (df_ml['date'] >= pd.Timestamp('2014-03-01')) & (df_ml['date'] <= pd.Timestamp('2014-03-31'))\n",
-        "\n"
+        "test_mask  = (df_ml['date'] >= pd.Timestamp('2014-03-01')) & (df_ml['date'] <= pd.Timestamp('2014-03-31'))"
       ],
       "metadata": {
         "id": "OJd2fmNDyJUb"
@@ -900,10 +968,17 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#Fit XGBoost"
+      ],
+      "metadata": {
+        "id": "yGlfiq5Sqxe8"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# Fit XGBoost\n",
-        "\n",
         "xgb = XGBRegressor(\n",
         "    n_estimators=900,\n",
         "    learning_rate=0.05,\n",
@@ -1387,11 +1462,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Predict & evaluate"
+      ],
+      "metadata": {
+        "id": "MZz-iK-wq6CF"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# Predict & evaluate\n",
-        "\n",
-        "\n",
         "y_pred = xgb.predict(X_test)\n",
         "\n",
         "mae = mean_absolute_error(y_test, y_pred)\n",
@@ -1426,85 +1507,7 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "252181a2",
-        "outputId": "28cedea3-e43e-4b74-8a47-de18df61545c"
-      },
       "source": [
-        "print(\"Train mask head:\\n\", train_mask.head())\n",
-        "print(\"\\nTest mask head:\\n\", test_mask.head())\n",
-        "print(\"\\ndf_ml head:\\n\", df_ml.head())\n",
-        "print(\"\\ndf_ml info:\\n\", df_ml.info())"
-      ],
-      "execution_count": 89,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Train mask head:\n",
-            " 0    True\n",
-            "1    True\n",
-            "2    True\n",
-            "3    True\n",
-            "4    True\n",
-            "Name: date, dtype: bool\n",
-            "\n",
-            "Test mask head:\n",
-            " 0    False\n",
-            "1    False\n",
-            "2    False\n",
-            "3    False\n",
-            "4    False\n",
-            "Name: date, dtype: bool\n",
-            "\n",
-            "df_ml head:\n",
-            "         date  unit_sales   lag_1   lag_7  lag_14    lag_30  rolling_mean_7  \\\n",
-            "0 2014-02-07      3190.0  3063.0  4117.0  3916.0  4256.496     4222.857143   \n",
-            "1 2014-02-08      3937.0  3190.0  5863.0  4921.0  4680.000     4090.428571   \n",
-            "2 2014-02-09      4640.0  3937.0  5840.0  6041.0  3852.694     3815.285714   \n",
-            "3 2014-02-10      3017.0  4640.0  3777.0  3566.0  5318.000     3643.857143   \n",
-            "4 2014-02-11      2885.0  3017.0  3650.0  3742.0  5814.124     3535.285714   \n",
-            "\n",
-            "   rolling_std_7  day_of_week  month  is_weekend  \n",
-            "0    1164.409640            4      2           0  \n",
-            "1    1229.357943            5      2           1  \n",
-            "2     950.397411            6      2           1  \n",
-            "3     546.885554            0      2           0  \n",
-            "4     589.803841            1      2           0  \n",
-            "<class 'pandas.core.frame.DataFrame'>\n",
-            "RangeIndex: 53 entries, 0 to 52\n",
-            "Data columns (total 11 columns):\n",
-            " #   Column          Non-Null Count  Dtype         \n",
-            "---  ------          --------------  -----         \n",
-            " 0   date            53 non-null     datetime64[ns]\n",
-            " 1   unit_sales      53 non-null     float64       \n",
-            " 2   lag_1           53 non-null     float64       \n",
-            " 3   lag_7           53 non-null     float64       \n",
-            " 4   lag_14          53 non-null     float64       \n",
-            " 5   lag_30          53 non-null     float64       \n",
-            " 6   rolling_mean_7  53 non-null     float64       \n",
-            " 7   rolling_std_7   53 non-null     float64       \n",
-            " 8   day_of_week     53 non-null     int32         \n",
-            " 9   month           53 non-null     int32         \n",
-            " 10  is_weekend      53 non-null     int64         \n",
-            "dtypes: datetime64[ns](1), float64(7), int32(2), int64(1)\n",
-            "memory usage: 4.3 KB\n",
-            "\n",
-            "df_ml info:\n",
-            " None\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "\n",
-        "\n",
         "# --- Metrics ---\n",
         "mae = mean_absolute_error(y_test, y_pred)\n",
         "try:\n",
@@ -1607,7 +1610,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "1) Extra metrics (Bias, MAD, rMAD, MAPE)"
+        "#W3 Start: Create Extra metrics (Bias, MAD, rMAD, MAPE)"
       ],
       "metadata": {
         "id": "zQ7EVwZ1Qjje"
@@ -1616,7 +1619,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# === Extra metrics on your existing y_test / y_pred ===\n",
+        "# === Extra metrics on existing y_test / y_pred ===\n",
         "\n",
         "def safe_mape(y_true, y_pred):\n",
         "    yt = np.asarray(y_true, dtype=float)\n",
@@ -1659,7 +1662,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "2) Log the baseline to MLflow (params, metrics, forecast plot)"
+        "#Log the baseline to MLflow (params, metrics, forecast plot)"
       ],
       "metadata": {
         "id": "zUYOwfMzQtEV"
@@ -1729,7 +1732,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "3) Quick tuning, retrain best on Jan–Feb, evaluate on March, log a second run"
+        "#Quick tuning, retrain best on Jan–Feb, evaluate on March, log a second run"
       ],
       "metadata": {
         "id": "RpjlTRgDRdhG"
@@ -1870,6 +1873,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#Scaling the output to improve performance"
+      ],
+      "metadata": {
+        "id": "szGZFxQTrhRI"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Use last 7 days of Feb from your existing train_df as a small validation window\n",
@@ -1882,8 +1894,6 @@
         "\n",
         "y_val_pred = xgb_tuned.predict(X_val)\n",
         "\n",
-        "#den = np.mean(y_val_pred)\n",
-        "#k = float(np.mean(y_val) / den) if den and np.isfinite(den) else 1.0\n",
         "print(f\"Bias-correction factor k = 1.14\")\n",
         "\n",
         "# Apply to March predictions\n",
@@ -1898,7 +1908,7 @@
         "\n",
         "print(f\"After bias correction → MAE: {mae_bc:,.2f} | RMSE: {rmse_bc:,.2f}\")\n",
         "\n",
-        "# Plot (you can replace your old plot with this)\n",
+        "# Plot\n",
         "plt.figure(figsize=(12,5))\n",
         "plt.plot(test_df['date'], y_test.values, label='Actual', linewidth=2)\n",
         "plt.plot(test_df['date'], y_pred_tuned, label='Predicted (tuned)', linestyle='--', alpha=0.45)\n",
@@ -1940,7 +1950,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "4) Save preprocessing artifacts for next week"
+        "#Save preprocessing artifacts"
       ],
       "metadata": {
         "id": "5QHKnvmPRrcR"
@@ -2013,6 +2023,15 @@
       ],
       "metadata": {
         "id": "qr9ewpxxXOo8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Quick Metric Comparison"
+      ],
+      "metadata": {
+        "id": "HfhCVjONrxBE"
       }
     },
     {
