--- a/3_Time_Series_W3_Analysis.ipynb
+++ b/3_Time_Series_W3_Analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyNq9sUG8euJDhinpVlzXb13",
+      "authorship_tag": "ABX9TyNfIMYZzAIGnOJseH3w0tPN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1744,7 +1744,7 @@
         "# === Simple grid search on a tiny validation split (last 7 days of Feb) ===\n",
         "\n",
         "\n",
-        "# split your current train_df into (train2, valid2)\n",
+        "# split current train_df into (train2, valid2)\n",
         "val_days = np.sort(train_df['date'].unique())[-7:]\n",
         "valid2 = train_df[train_df['date'].isin(val_days)]\n",
         "train2 = train_df[~train_df['date'].isin(val_days)]\n",
@@ -1884,7 +1884,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Use last 7 days of Feb from your existing train_df as a small validation window\n",
+        "# Use last 7 days of Feb from existing train_df as a small validation window\n",
         "val_days = np.sort(train_df['date'].unique())[-7:]\n",
         "X_val = train_df.loc[train_df['date'].isin(val_days), feature_cols]\n",
         "y_val = train_df.loc[train_df['date'].isin(val_days), target_col]\n",
@@ -2061,7 +2061,7 @@
         "    mape = safe_mape(y_true, y_pred)\n",
         "    return {\"MAE\": mae, \"RMSE\": rmse, \"Bias\": bias, \"MAD\": mad, \"rMAD_%\": rmad, \"MAPE_%\": mape}\n",
         "\n",
-        "# Collect whatever predictions exist in your session\n",
+        "# Collect whatever predictions exist in the session\n",
         "candidates = []\n",
         "if \"y_pred\" in locals():        # baseline\n",
         "    candidates.append((\"XGB baseline\", y_pred))\n",
@@ -2088,7 +2088,7 @@
         "\n",
         "display(results)\n",
         "\n",
-        "# Optional: small bar plot (MAE & RMSE)\n",
+        "# Bar plot (MAE & RMSE)\n",
         "import matplotlib.pyplot as plt\n",
         "plt.figure(figsize=(8,4))\n",
         "plt.plot(results.index, results[\"MAE\"], marker=\"o\", label=\"MAE\")\n",
